Migrated Metrics (#3)
* Created a Promethius adapter for collecting and viewing Datadog metrics

---------

Signed-off-by: Vessel9817 <151808241+Vessel9817@users.noreply.github.com>